--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-<h1>Hello, I am Wei Shen</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Justin Bieber Fan Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Justin Bieber Fan Club</h1>
+        <nav>
+            <ul>
+                <li><a href="#bio">Biography</a></li>
+                <li><a href="#music">Music</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="bio">
+        <h2>Biography</h2>
+        <p>Justin Bieber, born on March 1, 1994, is a Canadian singer and songwriter...</p>
+    </section>
+
+    <section id="music">
+        <h2>Top Hits</h2>
+        <div class="playlist">
+            <audio controls>
+                <source src="song1.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+            <audio controls>
+                <source src="song2.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+            <!-- Add more audio tracks as needed -->
+        </div>
+    </section>
+
+    <section id="gallery">
+        <h2>Photo Gallery</h2>
+        <div class="gallery">
+            <img src="justin1.jpg" alt="Justin Bieber Image 1">
+            <img src="justin2.jpg" alt="Justin Bieber Image 2">
+            <img src="justin3.jpg" alt="Justin Bieber Image 2">
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Follow Justin</h2>
+        <div class="social-links">
+            <a href="https://twitter.com/justinbieber" target="_blank">Twitter</a>
+            <a href="https://www.instagram.com/justinbieber/" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/JustinBieber" target="_blank">Facebook</a>
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2024 Justin Bieber Fan Page. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
