--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
             position: fixed;
             top: 0;
             left: 0;
-            background-color: #2c3e50;
+            background-color: rgb(1, 1, 57);
             padding-top: 20px;
         }
 
-        .sidebar-pic {
+        .sidemenu-pic {
             text-align: center;
             margin-bottom: 10px;
             color:beige
         }
 
-        .sidebar-pic img {
+        .sidemenu-pic img {
             width: 150px;
             height: 150px;
             border-radius: 50%;
@@ -30,7 +30,6 @@
         }
 
         .sidemenu a{
-            padding:6px;
             color:white;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-size: 20px;
@@ -96,9 +95,8 @@
     </style>
 </head>
 <body>
-    <!-- sidemenu code css above-->
     <div class="sidemenu">
-        <div class="sidebar-pic">
+        <div class="sidemenu-pic">
             <img src="me.png"></img>
             <h2>Wei Shen</h2>
         </div>
