--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             position: fixed;
             top: 0;
             left: 0;
-            background-color: rgb(1, 1, 57);
+            background-color: darkslategrey;
             padding-top: 20px;
         }
 
